--- a/public/angular-app/stocks/stocks.html
+++ b/public/angular-app/stocks/stocks.html
@@ -7,7 +7,7 @@
         <div class='col-md-2'>
             <label> Search: <input id="SearchBoxSym" ng-model="search.Symbol" ng-change="vm.inputChange()"></label>
             <ul>
-                <li ng-repeat="stock in vm.stocks | filter: search | limitTo:vm.quantity"><a href="#!/stocks/{{stock._id}}">{{stock.Name}} ({{stock.Symbol}})</a></li>
+                <li ng-repeat="stock in vm.stocks | filter: search"><a href="#!/stocks/{{stock._id}}">{{stock.Name}} ({{stock.Symbol}})</a></li>
                 <li>more...</li>
             </ul>
         </div>
