--- a/public/angular-app/stocks/stocks.html
+++ b/public/angular-app/stocks/stocks.html
@@ -4,15 +4,18 @@
 
 <div class='container'>
     <div class='row'>
-        <div class='col-md-2'>
+        <div class='col-md-6'>
             <label> Search: <input id="SearchBoxSym" ng-model="search.Symbol" ng-change="vm.inputChange()"></label>
             <ul>
                 <li ng-repeat="stock in vm.stocks | filter: search"><a href="#!/stocks/{{stock._id}}">{{stock.Name}} ({{stock.Symbol}})</a></li>
                 <li>more...</li>
             </ul>
         </div>
-        <div class='col-md-2'>
-            <p>jaksdjhaksdjhaskjd</p>
+        <div class='col-md-6'>
+            <ul>
+                Most recent searches
+                <li ng-repeat="search in vm.searchAnalytics">{{search.Symbol}}</li>
+            </ul>
         </div>
     </div>
 </div>
