--- a/public/angular-app/register/register.html
+++ b/public/angular-app/register/register.html
@@ -1,11 +1,16 @@
 <h1>Register</h1>
+<p>Need to login? <a href="#!/login">Login</a>.</p>
 <div ng-if="vm.message" class="alert alert-success" role="alert">
-  <p>{{ vm.message }}</p>
+  <p><a href="#!/login">{{ vm.message }}</a></p>
 </div>
 <div ng-if="vm.error" class="alert alert-danger" role="alert">
   {{ vm.error }}
 </div>
 <form ng-hide="vm.message" name="register" ng-submit="vm.register()">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="name" class="form-control" id="name" placeholder="Name" ng-model="vm.name" autocapitalize="none">
+  </div>
   <div class="form-group">
     <label for="username">Username</label>
     <input type="username" class="form-control" id="username" placeholder="Username" ng-model="vm.username" autocapitalize="none">
