--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             <ul>
                <li><a href='#!/'><strong>min nasdaq</strong></a></li>
                <li><a href="#!/login">Login</a></li>
+               <li><a href="#!/profile">Profile</a></li>
             </ul>
       </footer>
 
@@ -29,9 +30,11 @@
       <script src="angular-app/auth-service/auth-interceptor.js"></script>
       <script src="angular-app/auth-service/auth-service.js"></script>
       <script src="angular-app/data-factory/stock-data-factory.js"></script>
+      <script src="angular-app/data-factory/user-data-factory.js"></script>
       <script src="angular-app/login/login-controller.js"></script>
       <script src="angular-app/register/register-controller.js"></script>
       <script src="angular-app/stocks/stocks-controller.js"></script>
       <script src="angular-app/stocks-info/stock-info-controller.js"></script>
+      <script src="angular-app/user-profile/user-profile-controller.js"></script>
    </body>
 </html>
